Replace logic for total number of experiment groups with numbers for each groups
